feat : downgrade to Java 11, toList() -> Collectors.toList()